manifests/03-service-clusterip.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-app-clusterip
  namespace: default
spec:
  type: ClusterIP
  selector:
    app: web-app
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
