manifests/04-service-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-app-nodeport
  namespace: default
spec:
  type: NodePort
  selector:
    app: web-app
  ports:
  - port: 80
    targetPort: 80
    nodePort: 30080
    protocol: TCP
    name: http
