manifests/05-service-loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-app-lb
  namespace: default
spec:
  type: LoadBalancer
  selector:
    app: web-app
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
